<resources>
    <!--    Shared Preference Keys     -->
    <string name="is_onboarding_shown_key">is_onboarding_shown</string>
    <string name="is_profile_data_filled">is_profile_data_filled</string>

    <string name="app_name">stroke-android</string>
    <string name="preference_file_key">com.stroke.stroke-android.PREFERENCE_FILE_KEY</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="search_for_anything">Search for anything</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="no_result">No Result</string>
    <string name="about_me">About me</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
</resources>