<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.home.ui.screen.HomeFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sivProfile"
        android:layout_width="@dimen/home_profile_size"
        android:layout_height="@dimen/home_profile_size"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/iBtnFavorite"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:contentDescription="@string/favorite"
        app:icon="@drawable/ic_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/sivProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sivProfile" />

    <Button
        android:id="@+id/iBtnSearch"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:contentDescription="@string/search"
        app:icon="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/sivProfile"
        app:layout_constraintEnd_toStartOf="@id/iBtnFavorite"
        app:layout_constraintTop_toTopOf="@+id/sivProfile" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/explore"
        android:textAppearance="?attr/textAppearanceHeadlineLarge"
        app:layout_constraintBottom_toBottomOf="@+id/sivProfile"
        app:layout_constraintStart_toEndOf="@+id/sivProfile"
        app:layout_constraintTop_toTopOf="@+id/sivProfile" />

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:id="@+id/filledTextField"-->
    <!--        style="?attr/textInputFilledStyle"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="@dimen/margin_medium_x_24"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:enabled="false"-->
    <!--        android:hint="@string/search_for_anything"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tvTitle">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content" />-->

    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPosts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sivProfile"
        tools:listitem="@layout/item_post" />

    <ProgressBar
        android:id="@+id/pbPostsLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvPosts"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>